<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditsScreen"
    android:background="#160203">

    <TextView
        android:id="@+id/designersList2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dess"
        android:textAlignment="center"
        android:textColor="#ff7900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/designers"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/backButtonCredits"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:background="@android:color/transparent"
        android:onClick="backToMain"
        android:text="@string/back"
        android:textColor="#ff7900"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/programmers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programmer"
        android:textColor="#3BF607"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.256" />

    <TextView
        android:id="@+id/designers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designer"
        android:textColor="#3BF607"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <TextView
        android:id="@+id/programmersList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progs"
        android:textAlignment="center"
        android:textColor="#ff7900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/programmers"
        app:layout_constraintVertical_bias="0.05" />
</androidx.constraintlayout.widget.ConstraintLayout>