<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#160203"
    tools:context=".GameScreenBegin">

    <TextView
        android:id="@+id/storyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/storyTextBegin"
        android:textColor="#ff7900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <TextView
        android:id="@+id/textBeginC1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/storyChoiceBegin"
        android:textColor="#3BF607"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBeginC1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonBeginC1" />

    <Button
        android:id="@+id/buttonBeginC1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:alpha="0"
        android:backgroundTint="#A9A9A9"
        android:onClick="selectChoice1"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storyText" />

    <TextView
        android:id="@+id/textBeginC2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/storyChoiceBegin2"
        android:textAlignment="center"
        android:textColor="#3BF607"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBeginC2"
        app:layout_constraintEnd_toEndOf="@+id/buttonBeginC2"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/buttonBeginC2"
        app:layout_constraintTop_toTopOf="@+id/buttonBeginC2" />

    <Button
        android:id="@+id/buttonBeginC2"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:alpha="0"
        android:backgroundTint="#A9A9A9"
        android:onClick="selectChoice2"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBeginC1" />

</androidx.constraintlayout.widget.ConstraintLayout>